--- a/ver2/config/template.yml
+++ b/ver2/config/template.yml
@@ -5,5 +5,9 @@ model: # ptファイルへのpath
 video_path: # 使う動画へのパス
 video_output_path: # 出力先のパス
 
+# About Logs
+log_path: # log/分析対象/**_log_{date}.log
+# ex. log_path: log/shopping_center/sc_log_{date}.log
+
 # About process
 process_num: # プロセス数
