--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 __pycache__/
 .vscode/
+/data/
 /src/
-pts/
-data/
+ver2/pts/*.pt
+ver2/data/*.avi
+ver2/data/*.png
+ver2/data/*.mp4
 memo/
-outputs/
+ver2/outputs/*.mp4
 ver2/config/*.yml
 *.log
