add single process project

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,18 @@
 __pycache__/
 .vscode/
-/data/
 /src/
+memo/
+*.log
+.DS_Store
 ver2/pts/*.pt
 ver2/data/*.avi
 ver2/data/*.png
 ver2/data/*.mp4
-memo/
 ver2/outputs/*.mp4
 ver2/config/*.yml
-*.log
-.DS_Store
+single_process/pts/*.pt
+single_process/data/*.avi
+single_process/data/*.png
+single_process/data/*.mp4
+single_process/outputs/*.mp4
+single_process/config/*.yml
